fix: correct CORS security misconfiguration
- Replace allowedOrigins('*') with explicit origins list
  (wildcard origin + allowCredentials=true is rejected by all browsers)
- List allowed dev origins: localhost:5173, 5174, 3000
- Explicitly enumerate allowed HTTP methods instead of wildcard